--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap"
       rel="stylesheet"
     />
-    <link rel='icon' href='./src/img/check.png'>
+    <link rel="icon" href="./src/img/check.png" />
     <link rel="stylesheet" href="src/sass/main.css" />
     <script type="module" src="./src/js/controller.js"></script>
   </head>
