--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       rel="stylesheet"
     />
     <link rel="icon" href="./src/img/check.png" />
-    <link rel="stylesheet" href="src/sass/main.css" />
+    <link rel="stylesheet" href="src/sass/main.scss" />
     <script type="module" src="./src/js/controller.js"></script>
   </head>
   <body>
