--- a/index.html
+++ b/index.html
@@ -84,10 +84,11 @@
           <button class="tasks__delete-btn">Delete List</button>
         </div>
         <form action="#" class="form form--task">
-          <button class="btn btn--add">
+          <button class="btn btn--add btn--task">
+            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon--circle icon--task none" width="512" height="512" viewBox="0 0 512 512"><title>ionicons-v5-q</title><circle cx="256" cy="256" r="192" style="fill:none;stroke:#868e96;stroke-linecap:round;stroke-linejoin:round;stroke-width:32px"/></svg>
             <svg
               xmlns="http://www.w3.org/2000/svg"
-              class="h-6 w-6 icon icon--add"
+              class="h-6 w-6 icon icon--add icon--task" 
               fill="none"
               viewBox="0 0 24 24"
               stroke="currentColor"
